--- a/src/markdown/mas/mas_data_verkenning.Rmd
+++ b/src/markdown/mas/mas_data_verkenning.Rmd
@@ -17,12 +17,12 @@ library(here)
 opts_chunk$set(
   echo = TRUE)
 opts_knit$set(root.dir = here::here())
-source(here("R", "read_agri_use_parcels.R"))
-source(here("R", "utils.R"))
-source(here("R", "landuse_maps.R"))
-source(here("R", "abv.R"))
-source(here("R", "agro_environment_schemes.R"))
-source(here("R", "geocomputations.R"))
+source(here("src", "R", "read_agri_use_parcels.R"))
+source(here("src", "R", "utils.R"))
+source(here("src", "R", "landuse_maps.R"))
+source(here("src", "R", "abv.R"))
+source(here("src", "R", "agro_environment_schemes.R"))
+source(here("src", "R", "geocomputations.R"))
 library(tidyverse)
 library(sf)
 library(mapview)
