--- a/src/targets/mas_steekproef_pilootfase/targets_steekproefontwerp_pilootfase.Rmd
+++ b/src/targets/mas_steekproef_pilootfase/targets_steekproefontwerp_pilootfase.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
   warning = FALSE,
   message = FALSE)
 target_dir <- rprojroot::find_root_file(
-    "src", "mas", "targets",
+    "src", "targets", "mas_steekproef_pilootfase",
     criterion = rprojroot::is_git_root)
 knitr::opts_knit$set(
   root.dir = target_dir)
@@ -58,7 +58,7 @@ library(tidyverse)
 library(tibble)
 library(sf)
 target_dir <- rprojroot::find_root_file(
-    "src", "mas", "targets",
+    "src", "targets", "mas_steekproef_pilootfase",
     criterion = rprojroot::is_git_root)
 tar_unscript(script = file.path(target_dir, "_targets.R"))
 ```
@@ -89,17 +89,17 @@ tar_option_set(packages = c("dplyr",
                garbage_collection = TRUE,
                workspace_on_error = TRUE)
 target_dir <- rprojroot::find_root_file(
-    "src", "mas", "targets",
+    "src", "targets", "mas_steekproef_pilootfase",
     criterion = rprojroot::is_git_root)
 mbag_dir <- rprojroot::find_root_file(
     criterion = rprojroot::is_git_root)
-source(file.path(mbag_dir, "R", "landuse_maps.R"))
-source(file.path(mbag_dir, "R", "geocomputations.R"))
-source(file.path(mbag_dir, "R", "draw_sample.R"))
-source(file.path(mbag_dir, "R", "steekproefkader.R"))
-source(file.path(mbag_dir, "R", "berekening_hulpvariabelen.R"))
-source(file.path(mbag_dir, "R", "steekproeftrekking_nabehandeling.R"))
-source(file.path(mbag_dir, "R", "wfs_wcs.R"))
+source(file.path(mbag_dir, "src", "R", "landuse_maps.R"))
+source(file.path(mbag_dir, "src", "R", "geocomputations.R"))
+source(file.path(mbag_dir, "src", "R", "draw_sample.R"))
+source(file.path(mbag_dir, "src", "R", "steekproefkader.R"))
+source(file.path(mbag_dir, "src", "R", "berekening_hulpvariabelen.R"))
+source(file.path(mbag_dir, "src", "R", "steekproeftrekking_nabehandeling.R"))
+source(file.path(mbag_dir, "src", "R", "wfs_wcs.R"))
 
 ```
 
